--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "bluebird": "^3.1.1",
     "body-parser": "^1.14.2",
+    "bookshelf": "^0.9.1",
+    "checkit": "^0.6.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "jade": "^1.11.0",
@@ -19,7 +22,9 @@
     "knex": "^0.9.0",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
+    "morgan": "^1.6.1",
     "nconf": "^0.8.2",
-    "pg": "^4.4.3"
+    "pg": "^4.4.3",
+    "serve-favicon": "^2.3.0"
   }
 }
