--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alt": "^0.16.5",
     "bcrypt": "^0.8.5",
     "bluebird": "^3.1.1",
     "body-parser": "^1.14.2",
     "bookshelf": "^0.9.1",
+    "bootstrap": "^3.3.6",
     "checkit": "^0.6.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
+    "history": "^1.13.0",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
     "jwt-simple": "^0.4.0",
@@ -25,12 +28,10 @@
     "morgan": "^1.6.1",
     "nconf": "^0.8.2",
     "pg": "^4.4.3",
-    "serve-favicon": "^2.3.0",
-    "alt": "^0.16.5",
-    "history": "^1.13.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0-rc4",
+    "serve-favicon": "^2.3.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
