validation for register

--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,7 @@
 {
   "name": "application-name",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "dependencies": {
+    "jwt-simple": "^0.4.0"
+  }
 }
