--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "pg": "^4.4.3",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
-    "react-router": "^1.0.0-rc4",
+    "react-router": "^1.0.3",
     "serve-favicon": "^2.3.0",
     "underscore": "^1.8.3"
   },
