--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bookshelf": "^0.9.1",
     "bootstrap": "^3.3.6",
     "checkit": "^0.6.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "history": "^1.13.0",
@@ -28,6 +29,7 @@
     "morgan": "^1.6.1",
     "nconf": "^0.8.2",
     "pg": "^4.4.3",
+    "pg-native": "^1.10.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.3",
