--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "application-name",
   "version": "0.0.1",
   "dependencies": {
-    "jwt-simple": "^0.4.0"
+    "jwt-simple": "^0.4.0",
+    "bluebird": "latest"
   }
 }
