--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "name": "application-name",
   "version": "0.0.1",
   "dependencies": {
+    "bluebird": "latest",
     "jwt-simple": "^0.4.0",
-    "bluebird": "latest"
+    "nodemailer": "^2.1.0"
   }
 }
