--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.6.1",
     "nconf": "^0.8.2",
     "nodemailer": "^2.1.0",
+    "nodemailer-sendmail-transport": "^1.0.0",
     "nodemailer-smtp-transport": "^2.4.0",
     "pg": "^4.4.3",
     "react": "^0.14.2",
