--- a/package.json
+++ b/package.json
@@ -40,14 +40,15 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
+    "babel-preset-stage-1": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-html-replace": "^1.5.4",
-    "gulp-sass": "^2.0.4",
     "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.0.4",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
