--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jwt-simple": "^0.4.0",
     "knex": "^0.9.0",
     "lodash": "^3.10.1",
+    "method-override": "^2.3.5",
     "moment": "^2.11.2",
     "morgan": "^1.6.1",
     "nconf": "^0.8.2",
@@ -34,6 +35,7 @@
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.3",
+    "request": "^2.69.0",
     "serve-favicon": "^2.3.0",
     "underscore": "^1.8.3"
   },
