--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "nodemailer": "^2.2.0",
     "nodemailer-sendmail-transport": "^1.0.0",
     "nodemailer-smtp-transport": "^2.4.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^4.4.3",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
