--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "doc": "esdoc -c esdoc_client.json && esdoc -c esdoc_partner.json"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "checkit": "^0.6.0",
     "cookie-parser": "^1.4.1",
     "esdoc": "^0.4.6",
+    "esdoc-es7-plugin": "0.0.3",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "history": "^1.13.0",
