--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "doc": "esdoc -c esdoc_client.json && esdoc -c esdoc_partner.json"
+    "doc": "esdoc -c esdoc_client.json && esdoc -c esdoc_partner.json && esdoc -c esdoc_common.json"
   },
   "author": "",
   "license": "ISC",
