--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-router": "^1.0.3",
     "request": "^2.69.0",
     "serve-favicon": "^2.3.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "paypal-rest-sdk": "latest"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.2",
