--- a/server/config_example.json
+++ b/server/config_example.json
@@ -4,6 +4,7 @@
   "auth_domain": "auth.vippay.loc",
   "designClass": "design1",
   "info_domain": "vippay.info",
+  "email": "",
   "payment": {
     "interkassa": {
       "ik_co_id": "57064bad3d1eaf67478b4570",
